[IMPROVEMENT] Fixed spacing on the accounts page.

--- a/assets/css/dashboard-css-2024.css
+++ b/assets/css/dashboard-css-2024.css
@@ -815,6 +815,10 @@ textarea.swal2-input {
         padding: 4px 10px !important;
         padding-left:0 !important;
     }
+
+    .macBook-padding-top {
+        padding-top:10px;
+    }
     
 }
 
